--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,11 @@ spring:
   config:
     import: application-mysql.yml
   jpa:
+    database: mysql
+    open-in-view: false
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
